--- a/css/index.scss
+++ b/css/index.scss
@@ -10,7 +10,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 .banner {
-  background-image: url(/img/banner.png);
+  background-image: url(../img/banner.png);
   height: 958px;
   background-size: cover;
   background-position: center;
